--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-    - run: echo My Job
-    - uses: davidbuzinski/actions-test@main
+  myjob:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo My Job
+      - uses: davidbuzinski/actions-test@main
